packages/dash-components/src/components/dash-modal/dash-modal.css
:host([open]) {
  .modal {
    pointer-events: all;
    visibility: visible;

    .body {
      animation: fadeInModal ease-out var(--dash-transition-time-default);

      @media only screen and (max-width: 768px) {
        animation: fadeInModalMobile ease-out var(--dash-transition-time-default);
      }
    }
  }
}

:host(:not([fullscreen])) .modal .body {
  max-height: 60vh;
  max-width: min(90vw, 48rem);
}

:host([scale='s']) .modal .body {
  width: 480px;

  @media only screen and (max-width: 768px) {
    width: 768px;
  }
}

:host(:not([fullscreen]):not([disable-fullscreen-mobile-view])) .modal .body {
  @media only screen and (max-width: 768px) {
    height: 95vh;
    max-height: 95vh;
  }
}

:host([scale='l']) .modal .body {
  width: 1200px;
  max-width: min(90vw, 1200px);
}

:host([fullscreen][open]) .modal .body {
  width: calc(100vw - var(--dash-spacing-12));
  height: calc(100vh - var(--dash-spacing-12));
  max-height: calc(100vh - var(--dash-spacing-12));
  animation: fadeInModalFullscreen ease-out var(--dash-transition-time-default);
}

:host(:not([fullscreen])) .modal.closing .body,
:host([fullscreen]) .modal.closing .body {
  animation: fadeOutModal ease-in var(--dash-transition-time-default);
}

.modal {
  pointer-events: none;
  position: absolute;
  visibility: hidden;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  --dash-modal-content-padding-x: var(--dash-spacing-3);
  z-index: var(--dash-z-index-modal);
  overflow: hidden;

  dash-scrim {
    z-index: 1;
  }

  .body {
    display: flex;
    flex-direction: column;
    z-index: 1;
    background-color: var(--dash-background-2);
    border-radius: var(--dash-border-radius);
    padding: var(--dash-spacing-1);
    width: 768px;

    .heading {
      padding-inline-start: var(--dash-spacing-3);
      padding-top: var(--dash-spacing-2);
      padding-bottom: var(--dash-spacing-2);
      font-size: var(--dash-font-size-6);
      display: flex;
      position: relative;

      .heading-text {
        flex: auto;
      }

      .close-button-x {
        position: absolute;
        top: var(--dash-spacing-2);
        right: var(--dash-spacing-2);
      }
    }

    .content {
      flex-grow: 1;
      display: flex;
      flex-direction: column;
      padding: var(--dash-modal-content-padding-x) var(--dash-modal-content-padding-x) 0 var(--dash-modal-content-padding-x);
      overflow: hidden;
    }

    .footer {
      display: flex;
      padding: var(--dash-spacing-1) var(--dash-spacing-2) var(--dash-spacing-2) var(--dash-spacing-2);
      align-items: center;

      .footer-start {
        display: flex;
      }

      .footer-end {
        display: flex;
        margin-inline-start: auto;
      }
    }
  }
}

@keyframes fadeInModal {
  0% {
    opacity: 0;
    transform: perspective(500px) translate3d(0, 0, 100px);
  }
  100% {
    opacity: 1;
    transform: perspective(500px) translate3d(0, 0, 0);
  }
}

@keyframes fadeOutModal {
  0% {
    opacity: 1;
    transform: perspective(500px) translate3d(0, 0, 0);
  }
  100% {
    opacity: 0;
    transform: perspective(500px) translate3d(0, 0, -100px);
  }
}

@keyframes fadeInModalMobile {
  0% {
    opacity: 0;
    transform: perspective(500px) translate3d(0, 0, -100px);
  }
  100% {
    opacity: 1;
    transform: perspective(500px) translate3d(0, 0, 0);
  }
}

@keyframes fadeInModalFullscreen {
  0% {
    opacity: 0;
    transform: perspective(500px) translate3d(0, 0, -100px);
  }
  100% {
    opacity: 1;
    transform: perspective(500px) translate3d(0, 0, 0);
  }
}

